--- a/estilos.css
+++ b/estilos.css
@@ -5,4 +5,12 @@ padding: 500 px }
 .fotoPresentacion {
     height: 10em ; 
     width: 10em ; 
-    margin-left: 10em}
+    margin-left: 1em}
+
+.logoArgentinaPrograma
+{   height: 5em ; 
+    width: 10em ; 
+    margin-left: 0.2em; 
+    margin-bottom: :0.2em"
+    
+}
